Fix scrollbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,11 +22,7 @@ $navbar-item-hover-background-color: $white-ter;
 $navbar-item-hover-color: $white;
 
 $navbar-tab-active-border-bottom-width: 0px;
-#navbar{
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
+
 .navbar-burger:hover{
     color: $white;
     background-color: $white-ter;
@@ -38,9 +34,7 @@ $footer-padding: 1rem 1.5rem 1.4rem;
 footer{
     border-radius: 25px 25px 0px 0px;
     box-shadow: -29px -1px 16px rgba(0, 0, 0, 0.45);
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    
 }
 
 html,body {
